# climetlab

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  HOWTO.md  LICENSE  MANIFEST.in  README.md  climetlab-and-ecmwflibs-install.md  climetlab-and-plugins.code-workspace  climetlab.code-workspace  pyproject.toml  pytest.ini  requirements.txt  setup.py  test  test.py  test.txt  tf.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: check-and-publish.yml  check-only.yml  check.yml  checks.yml  coverage.yml  dev.yml  full-check.yml  installs.yml  long-test-nightly.yml  long-test.yml  manual-check.yml  matrix_includes.json  qa.yml  short-test.yml  test-and-release.yml  test-and-release2.yml  test-cache.yml  testing.yml
benchmarks/: test_benchmark_multi.py  test_benchmark_sources.py
climetlab/: __init__.py  __main__.py  aaa.py  arg_manager.py  dataset.py  decorators.py  mockup.py  normalize.py  profiling.py  prompt.py  scripts.py  source.py  testing.py  version  version.py
climetlab/arguments/: __init__.py  args_kwargs.py  argument.py  climetlab_types.py  guess.py  input_manager.py  transformers.py
climetlab/core/: __init__.py  bbox.py  caching.py  constants.py  data.py  docstring.py  index.py  ipython.py  metadata.py  order.py  plugins.py  select.py  settings.py  statistics.py  (+2 more)
dev/: HOWTOS.md  TODO.md  constants.py  dev.ipynb  dev.py  in-progress.ipynb  tf.ipynb  tf.py  timeseries.csv  timeseries.ipynb
docs/: Makefile  apply-fmt.sh  check-index.sh  conf.py  dataset-example.py  datasource-example.py  examples.rst  firststeps.rst  generate-examples-maps.py  index.rst  installing.rst  overview.rst  print-magics-objects.py  requirements.txt
experiments/: README  animate.ipynb  bias.py  dask-client.py  dask_tests.py  era5-vs-oper.py  fdb.py  fourcastnet.yaml  gaussian.ipynb  gaussian.py  grib-caching.py  grib-coding.py  grib-tensorflow.py  grib.ipynb  load-zarr-fourcastnet.yaml  load-zarr-from-db-pl-and-sfc.yaml  load-zarr.yaml  order.py  scaling.py  start_dask.py  t.py  t_draft.py  test-cubes.py  test-cubes2.py  timeseries.py  transposition.py  virtual.py  virtual1.py  virtual2.py
schemas/: definitions.json  magics.json  mcoast.json  mcont.json  mmap.json  msymb.json  mtable.json
tests/: conftest.py  example.ya_ml  example.yml  test-zarr-20p0-2022-6h-v2.yaml  test_annotations.py  test_arguments.py  test_availability.py  test_bbox.py  test_cache.py  test_cds.py  test_cli.py  test_constraints.py  test_consume.py  test_datasets.py  test_dates.py  test_datetime.py  test_dev.py  test_domains.py  test_download.py  test_dummy.py  test_examples.py  test_factorise.py  test_grib.py  test_imports.py  test_kwargs.py  test_magics.py  test_meteonet.py  test_multi.py  test_netcdf.py  test_normalise.py  test_normalise_availability.py  test_notebooks.py  test_numpy.py  test_output.py  test_patterns.py  test_plotting.py  test_plugins.py  test_qa_tools.py  test_script.py  test_settings.py  (+8 more)
tools/: import-eccharts.py  imports.py  profile.py  profile.sh
(+746 files in other folders)
